@@ -1,7 +1,7 @@
 <?php
 
 /**
- * index.php -- Displays the main frameset
+ * index.php -- Redirect to the login page.
  *
  * Copyright (c) 1999-2005 The SquirrelMail Project Team
  * Licensed under the GNU GPL. For full terms see the file COPYING.
@@ -11,6 +11,14 @@
  * $Id$
  */
 
+// are we configured yet?
+if( ! file_exists ( 'config/config.php' ) ) {
+    echo "<html><body><p><strong>ERROR:</strong> Config file \"<tt>config/config.php</tt>\" not found. " .
+        "You need to configure SquirrelMail before you can use it.</p></body></html>";
+    exit;
+}
+
+// if we are, go ahead to the login page.
 header("Location: src/login.php\n\n");
 
 ?>
